[package]
name = "runen"
version = "0.1.4"
edition = "2021"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
license = "MIT"

[dependencies]
cargo-xtask = "0.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[lib]
name = "librunen"
path = "src/lib.rs"
