[package]
name = "runen"
version = "0.2.0"
edition = "2021"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
license = "MIT"

[dependencies]
cargo-xtask = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.42", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "librunen"
path = "src/lib.rs"
