[package]
name = "runen"
version = "0.4.0"
edition = "2024"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
criterion = "0.5.1"
futures = "0.3.31"
regex = "1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "librunen"
path = "src/lib.rs"
